--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 <div class="col-lg-6 col-md-12 col-12">
                     <div class="hero-image wow fadeInRight" data-wow-delay=".4s">
                         <video id="video" height="480px" autoplay="true" muted loop>
-                            <source src="file:///C:/Users/fanti/Downloads/Eye_visual_for_AI_product.mp4" type="video/mp4" />
+                            <source src="./Eye_visual_for_AI_product.mp4" type="video/mp4" />
                           </video>
                           <style>
                             #video {
