--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                                 <a href="https://www.linkedin.com/in/manuel-dassi-a43bbb195/" type="submit" class="btn">M. DASSI LinkedIn</a>
                             </div>
                             <div class="col-md-6 button">
-                                <a href="./CV-GREEN.pdf" type="submit" style="background-color: cyan;" class="btn btn-primary">Download CV</a>
+                                <a href="./CV-CLOUD-0.pdf" type="submit" style="background-color: cyan;" class="btn btn-primary">Download CV</a>
                             </div>
                             <div class="col-md-6 button">
                                 <a href="https://github.com/dassimanuel000" type="submit" style="background-color: cyan;" class="btn btn-primary">Portfolio</a>
