--- a/index.html
+++ b/index.html
@@ -1054,7 +1054,7 @@
                             <div class="title" style="float:right;">
                                 <div id="text">
                                     <br><br>
-                                    <h3>CEO Life</h3>
+                                    <h3> better Life</h3>
                                     <h6>
                                         <br>
                                     LIFE-CM a été créé pour faciliter la vie d'où son appelletion. La vie qui, pour certains n'est pas facile tous les jours. LIFE-CM essayera donc de toucher les moindres détails qui préoccupent vos journées.
