--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
     </div>
     <!-- End Client Logo Section Area -->
 
-    <!-- Start Services Area -->
+    <!-- Start Services Area 
     <section class="services style3 section">
         <div class="container">
             <div class="row">
@@ -389,7 +389,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section>-->
     <!-- End Services Area -->
     <section class="services style3 section">
         <div class="container">
