--- a/index.html
+++ b/index.html
@@ -868,109 +868,6 @@
                     </div>
                     <div class="col-md-12 row">
                         <div class="col-lg-6 col-md-6 col-12">
-                            <div class="title">
-                                <div id="text">
-                                    <h3>Template Adobe premiero pro for app promo </h3>
-                                </div>
-                                <div class="body">
-                                    <a href="https://www.youtube.com/embed/Gs75fMBSfGE">
-                                        <Link>https://www.youtube.com/embed/Gs75fMBSfGE</Link>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-6 col-md-6 col-12">
-                            <div class="video-container">
-                                <img src="https://raw.githubusercontent.com/dassimanuel000/Event-Selection/master/assets/design.png" alt="" srcset="">
-                              <!--<iframe width="560" height="315" src="https://www.youtube.com/embed/Gs75fMBSfGE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                              --></div>
-                        </div>
-                    </div>
-                    <div class="col-md-12 row">
-                        <div class="col-lg-6 col-md-6 col-12">
-                            <div class="video-container">
-                                <img src="https://raw.githubusercontent.com/dassimanuel000/ALTAYA/main/screenshots/design.png" alt="" srcset="">
-                              <!--<iframe width="560" height="315" src="https://www.youtube.com/embed/Gs75fMBSfGE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                              --></div>
-                        </div>
-                        <div class="col-lg-6 col-md-6 col-12">
-                            <div class="title" style="float:right;">
-                                <div id="text">
-                                    <h3>Altaya App for Commerce</h3>
-                                </div>
-                                <div class="body">
-                                    <a href="https://www.youtube.com/embed/K4YTBg1qJIw">
-                                        <Link>https://www.youtube.com/embed/K4YTBg1qJIw</Link>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-12 row">
-                        <div class="col-lg-6 col-md-6 col-12">
-                            <br><br>
-                            <div class="title">
-                                <div id="text">
-                                    <h3>Poltronesofà App for Commerce </h3>
-                                </div>
-                                <div class="body">
-                                    <a href="https://www.youtube.com/embed/eRPUJn-BfVM">
-                                        <Link>https://www.youtube.com/embed/eRPUJn-BfVM</Link>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-6 col-md-6 col-12">
-                            <div class="video-container">
-                                <img src="https://raw.githubusercontent.com/dassimanuel000/Poltronesof-/main/screenshots/Poltronesof%C3%A0.png" alt="" srcset="">
-                              <!--<iframe width="560" height="315" src="https://www.youtube.com/embed/Gs75fMBSfGE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                              --></div>
-                        </div>
-                    </div>
-                    <div class="col-md-12 row">
-                        <div class="col-lg-6 col-md-6 col-12">
-                            <div class="video-container">
-                                <img src="https://raw.githubusercontent.com/dassimanuel000/OpenClassrom-App/main/screenshots/OPEN.png" alt="" srcset="">
-                              <!--<iframe width="560" height="315" src="https://www.youtube.com/embed/Gs75fMBSfGE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                              --></div>
-                        </div>
-                        <div class="col-lg-6 col-md-6 col-12">
-                            <div class="title" style="float:right;">
-                                <div id="text">
-                                    <br><br>
-                                    <h3>Open Classrom App for Course</h3>
-                                </div>
-                                <div class="body">
-                                    <a href="https://www.youtube-nocookie.com/embed/Uq0EEpZvaSw">
-                                        <Link>https://www.youtube-nocookie.com/embed/Uq0EEpZvaSw</Link>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-12 row">
-                        <div class="col-lg-6 col-md-6 col-12">
-                            <br><br>
-                            <div class="title">
-                                <div id="text">
-                                    <h3>Play Store App Clone  </h3>
-                                </div>
-                                <div class="body">
-                                    <a href="https://www.youtube.com/embed/Z5AD_ipiXJA">
-                                        <Link>https://www.youtube.com/embed/Z5AD_ipiXJA</Link>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-6 col-md-6 col-12">
-                            <div class="video-container">
-                                <img src="https://raw.githubusercontent.com/dassimanuel000/playstore/main/ss/playstore.png" alt="" srcset="">
-                              <!--<iframe width="560" height="315" src="https://www.youtube.com/embed/Gs75fMBSfGE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                              --></div>
-                        </div>
-                    </div>
-                    <div class="col-md-12 row">
-                        <div class="col-lg-6 col-md-6 col-12">
                             <div class="video-container">
                                 <img src="https://raw.githubusercontent.com/dassimanuel000/UNITY-SOFTWARE/master/unity.png" alt="" srcset="">
                               <!--<iframe width="560" height="315" src="https://www.youtube.com/embed/Gs75fMBSfGE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -1026,7 +923,7 @@
                                 <div id="text">
                                     <h3>Goow Fr  </h3>
                                     <p style="color: black;">
-                                    La Startup propose une nouvelle solution unique pour les marchés de proximités. 
+                                    Blockchain IA = La Startup propose une nouvelle solution unique pour les marchés de proximités. 
                                     </p>
                                 </div>
                                 <div class="body">
@@ -1038,7 +935,7 @@
                         </div>
                         <div class="col-lg-6 col-md-6 col-12">
                             <div class="video-container">
-                                <img src="https://raw.githubusercontent.com/dassimanuel000/goow/main/phone.png" alt="" srcset="">
+                                <img src="https://i.ibb.co/8NVDk3P/1-9h-P1g-Ut-SMt5-MOJLxs3r-UQ.jpg" alt="" srcset="">
                               <!--<iframe width="560" height="315" src="https://www.youtube.com/embed/Gs75fMBSfGE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                               --></div>
                         </div>
