--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 
 
     <!-- ========================= CSS here ========================= -->
-    <link rel="stylesheet" href="https://wpthemesgrid.com/themes/appmeet/assets/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="https://wpthemesgrid.com/themes/appmeet/assets/css/LineIcons.2.0.css" />
-    <link rel="stylesheet" href="https://wpthemesgrid.com/themes/appmeet/assets/css/animate.css" />
-    <link rel="stylesheet" href="https://wpthemesgrid.com/themes/appmeet/assets/css/tiny-slider.css" />
-    <link rel="stylesheet" href="https://wpthemesgrid.com/themes/appmeet/assets/css/glightbox.min.css" />
-    <link rel="stylesheet" href="https://wpthemesgrid.com/themes/appmeet/assets/css/main.css">
+    <link rel="stylesheet" href="./ss/bootstrap.min.css" />
+    <link rel="stylesheet" href="./ss/LineIcons.2.0.css" />
+    <link rel="stylesheet" href="./ss/animate.css" />
+    <link rel="stylesheet" href="./ss/tiny-slider.css" />
+    <link rel="stylesheet" href="./ss/glightbox.min.css" />
+    <link rel="stylesheet" href="./ss/main.css">
 </head>
 <style>
 
@@ -1184,14 +1184,14 @@ Cette innovation ne va pas changer vos vies mais la facilitera Contactez-nous po
     <!-- End Call Action Area -->
  
     <!-- ========================= JS here ========================= -->
-    <script src="https://wpthemesgrid.com/themes/appmeet/assets/js/bootstrap.min.js"></script>
-    <script src="https://wpthemesgrid.com/themes/appmeet/assets/js/wow.min.js"></script>
-    <script src="https://wpthemesgrid.com/themes/appmeet/assets/js/tiny-slider.js"></script>
-    <script src="https://wpthemesgrid.com/themes/appmeet/assets/js/glightbox.min.js"></script>
-    <script src="https://wpthemesgrid.com/themes/appmeet/assets/js/count-up.min.js"></script>
-    <script src="https://wpthemesgrid.com/themes/appmeet/assets/js/imagesloaded.min.js"></script>
-    <script src="https://wpthemesgrid.com/themes/appmeet/assets/js/isotope.min.js"></script>
-    <script src="https://wpthemesgrid.com/themes/appmeet/assets/js/main.js"></script>
+    <script src="./ss/bootstrap.min.js"></script>
+    <script src="./ss/wow.min.js"></script>
+    <script src="./ss/tiny-slider.js"></script>
+    <script src="./ss/glightbox.min.js"></script>
+    <script src="./ss/count-up.min.js"></script>
+    <script src="./ss/imagesloaded.min.js"></script>
+    <script src="./ss/isotope.min.js"></script>
+    <script src="./ss/main.js"></script>
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script type="text/javascript">
         //======== tiny slider
