--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@
                         <h1>Dassi Manuel</h1>
                         <p style="color: #666;">dassi.manuel000@gmail.com</p>
                         <p style="color: #333; font-weight: bold;">
-                            <span style="color: #007bff;">INGÉNIEUR DEVOPS & SRE & CLOUD </span><br>
-                            <span style="color: #28a745;">Francais Fluent & English Professionnel </span>
+                            <span style="color: #007bff;">ENGINEER DEVOPS & SRE & CLOUD </span><br>
+                            <span style="color: #28a745;"> Fluent in French & English  </span>
                             <br>
-                            <span style="color: #28a745;">RECHERCHE CDI </span>
+                            <span style="color: #28a745;"> CDI/Long Term </span>
                         </p>
                         <div style="background-color: #f8f9fa; padding: 10px; border-radius: 6px; border-left: 4px solid #007bff;">
                             Ingénieur DevOps certifié <strong>Azure (x2)</strong> et <strong>CCNA</strong>, expertise en Infrastructure, 
